better css file structure, positioning fix for error/success message

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,238 +1,10 @@
 
+@import "./partials/_buttons.css";
+@import "./partials/_resets.css";
 /*
  * BASE
  */
 html,
 body {
   font-family: 'avenir next', avenir, sans-serif;
-}
-
-/*
- * RESET STYLES
- */
-.input-reset {
-
-}
-
-.input-reset:focus,
-.btn-reset:focus {
-  outline:0
-=======
-
-/*general*/
-
-html {
-    height: 100%;
-}
-body {
-    background-color:rgba(235, 235, 235, 1);
-    color: rgba(41, 41, 41, 1);
-    height: 100%;
-}
-
-.container-fluid{
-    background-color:rgba(235, 235, 235, 1);
-    height: 100%;
-    padding: 0 5%;
-}
-
-.instructions {
-    width: 80%;
-}
-
-/*group page*/
-.member {
-    background-color:rgba(48, 67, 84, 1);
-    color: rgba(151, 174, 195, 1);
-    border-radius: 5px;
-    min-width:100px;
-    margin: 5px;
-    float: left;
-    text-align: center;
-}
-
-hr {
-    border-color: black;
-}
-
-
-
-/*main*/
-@media(min-width: 992px) {
-    .navbar-collapse {
-        height: 100%;
-        border-top: 0;
-        box-shadow: none;
-        max-height: none;
-        padding:10%;
-        /*background-color: rgba(19, 71, 134, 1);*/
-    }
-    .navbar-collapse.collapse {
-        display: block !important;
-        width: auto !important;
-        padding-bottom: 0;
-        overflow: visible !important;
-    }
-    .navbar-collapse.in {
-        overflow-x: visible;
-    }
-    .navbar {
-        /*max-width: 300px;*/
-        margin-right: 0;
-        margin-left: 0;
-    }
-    .navbar-nav,
-    .navbar-nav > li,
-    .navbar-left,
-    .navbar-right,
-    .navbar-header {
-        float: none !important;
-    }
-
-    
-
-    .navbar-right .dropdown-menu {
-        left: 0;
-        right: auto;
-    }
-    navbar-collapse .navbar-nav.navbar-right:last-child {
-        margin-right:0;
-    }
-}
-
-.hidden {
-    display: none;
-}
-
-.deletelist:hover {
-    cursor: pointer;
-}
-
-.myfriendlist {
-    max-height: 250px;
-    overflow-y: scroll;
-}
-
-.friendbox {
-    border-radius: 4px;
-    text-align: center;
-    color: rgba(96, 104, 123, 1);
-    font-size: 22px;
-    margin: 5px;
-}
-
-.friendbox .col-xs-3 {
-    border-right: 1px solid rgba(96, 104, 123, 1);
-}
-
-/*group page*/
-.besttimes {
-    background-color: rgba(188, 197, 205, 1);
-    border: 1px solid black;
-    max-height: 400px;
-    padding: 30px;
-    -webkit-box-shadow: -1px -4px 42px -13px rgba(0,0,0,0.91);
-    -moz-box-shadow: -1px -4px 42px -13px rgba(0,0,0,0.91);
-    box-shadow: -1px -4px 42px -13px rgba(0,0,0,0.91);
-}
-
-/*group page*/
-.displayedmembers {
-    max-height: 350px;
-}
-/* Scrollbar */ 
-
-/*general*/
-::-webkit-scrollbar {
-  width: 6px;
-  height: 6px;
-}
-::-webkit-scrollbar-button {
-  width: 33px;
-  height: 33px;
-}
-::-webkit-scrollbar-thumb {
-  background: #e1e1e1;
-  border: 0px none #ffffff;
-  border-radius: 27px;
-}
-::-webkit-scrollbar-thumb:hover {
-  background: #ffffff;
-}
-::-webkit-scrollbar-thumb:active {
-  background: #000000;
-}
-::-webkit-scrollbar-track {
-  background: #666666;
-  border: 0px none #ffffff;
-  border-radius: 78px;
-}
-::-webkit-scrollbar-track:hover {
-  background: #666666;
-}
-::-webkit-scrollbar-track:active {
-  background: #333333;
-}
-::-webkit-scrollbar-corner {
-  background: transparent;
-}
-
-/* End Scrollbar */
-
-
-.title:hover {
-    cursor: pointer;
-}
-
-
-/*groupspage*/
-.friendname:hover {
-    cursor: pointer;
-}
-
-/*main*/
-#friendlist li {
-    font-size: 30px;
-}
-
-li {
-    list-style-type: none;
-}
-
-.label{
-    font-size: 40px;
-    text-align: center;
-    color: rgba(41, 41, 41, 1);
-}
-
-.navbar .text-center{
-    color: rgba(41, 41, 41, 1);
-    font-size: 30px
-}
-
-.formbut {
-    margin: 30px;
-}
-
-
-.navbar-default .navbar-brand {
-    font-size:  40px;
-    color: rgba(41, 41, 41, 1);
-    align: center;
-}
-
-#groupname{
-    width: 20%;
-}
-
-.btn-reset {
-  border: none;
-  background: none;
-}
-
-/*
- * NAVIGATION
- */
-.btn-gradient {
-  background: linear-gradient(to right, rgba(246,46,36,1) 0%, rgba(255,54,121,1) 100%);
 }
