--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -27,7 +27,7 @@
             <div class="fl w-80-ns w-100 mw7">
 
     <body>
-    <div  class="container-fluid"> 
+    <div  class="container-fluid">
         <div class="row">
             <div class="col-md-4">
                 <nav class = "navbar navbar-default" role="navigation">
@@ -87,12 +87,12 @@
             <div class="col-md-8">
 
                 <% if(error && error.length > 0) { %>
-                    <div class="bg-red absolute f4 pa2 pr5 right-0 white avenir" role="alert">
+                    <div class="bg-red absolute f4 pa2 pr5 top-2 right-0 white avenir" role="alert">
                         <%= error %>
                     </div>
                 <% } %>
                 <% if(success && success.length > 0) { %>
-                    <div class="bg-green absolute f4 pa2 pr5 right-0 white avenir" role="alert">
+                    <div class="bg-green absolute f4 pa2 pr5 top-2 right-0 white avenir" role="alert">
                         <%= success %>
                     </div>
                 <% } %>
