--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -14,8 +14,7 @@
         <script src="//code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
         <script type="text/javascript" src="//cdn.jsdelivr.net/bootstrap.daterangepicker/2/daterangepicker.js"></script>
-        <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/bootstrap.daterangepicker/2/daterangepicker.css" />  
-        
+        <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/bootstrap.daterangepicker/2/daterangepicker.css" />
     </head>
     <body>
     <div  class="container-fluid"> 
@@ -40,7 +39,7 @@
                             <li><h3> Signed in as: <strong><%= currentUser.username %></strong></h3></li>
                             <br>
                             <li class="times">
-                                <a href="/myscedule" class="btn btn-default btn-lg">My Schedule</a>
+                                <a href="/myschedule" class="btn btn-default btn-lg">My Schedule</a>
                             </li>
                             <li class="myowngroups">
                                 <a href="/" class="btn btn-default btn-lg">My Groups</a>
