--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -1,10 +1,10 @@
 
 <% include partials/header %>
+<script type="text/javascript" src="/javascript.js"></script>
 
 
 
-
-    <% if(user) { %>
+    <% if(currentUser) { %>
 
         <div class="row">
             <div class="col-md-12">
@@ -42,7 +42,7 @@
     <% } else { %>
     <h2> Please register or login</h2>
     <% } %>
-    <script type="text/javascript" src="/javascript.js"></script>
+    
 
 
 
