--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -10,7 +10,7 @@
             <div class="col-md-12">
                 <div class="head">
                     <h3>My Groups</h3>
-                    <p class='instructions'>
+                    <p class='instructions inc'>
                         This is your groups page. In this page you can create remove and edit your groups 
                         as well as view the groups other users have included you in.
                         To start creating groups first add yourself to your friendlist and then make your first group 
