--- a/views/scedule.ejs
+++ b/views/scedule.ejs
@@ -1,21 +1,21 @@
 <% include partials/header %>
-
-
-
+<script type="text/javascript" src="/sceduler.js"></script>
+<link rel="stylesheet" href="/stylesheets/schedule.css">
 
     <h1 id="titlesc">Welcome to your scheduling page, <%= user.username %></h1>
     <br>
-    
-    <h4>
-        Here you add your free time to your Timed-Up account.<br>
-        You can add ranges of minutes, hours, days, months even years! There's no limit.<br>
-        Keep in mind that this time will be used to calculate shared time periods with group <br>
-        members which means that if it's not accurate it will lead to false results.<br>
-        <br>
-        After you do this,
-        you should add some friends and start creating groups <br>
-        in order to organize and view your common free time with them!
-    </h4>
+    <div class='inc'>
+        <h4>
+            Here you add your free time to your Timed-Up account.<br>
+            You can add ranges of minutes, hours, days, months even years! There's no limit.<br>
+            Keep in mind that this time will be used to calculate shared time periods with group <br>
+            members which means that if it's not accurate it will lead to false results.<br>
+            <br>
+            After you do this,
+            you should add some friends and start creating groups <br>
+            in order to organize and view your common free time with them!
+        </h4>
+    </div>
     <br>
     <hr>
 
@@ -41,5 +41,5 @@
 
 
 
-<script type="text/javascript" src="/sceduler.js"></script>
+
 <% include partials/footer %>
