fixed schedule bugs

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -4,7 +4,7 @@
 
     <form action="/register" method="post">
         <input type="text" name="username" placeholder="username" maxlength="11">
-        <input type="password" name="password" paceholder="password">
+        <input type="password" name="password" placeholder="password">
         <button>Submit</button>
     </form>
     
