--- a/views/scedule.ejs
+++ b/views/scedule.ejs
@@ -1,7 +1,6 @@
 <% include partials/header %>
 <script type="text/javascript" src="/sceduler.js"></script>
 <link rel="stylesheet" href="/stylesheets/schedule.css">
-
     <h1 id="titlesc">Welcome to your scheduling page, <%= user.username %></h1>
     <br>
     <div class='inc'>
@@ -21,18 +20,17 @@
 
     <div class="row">
         <div class="col-xs-6">
-            <form class="form group">
+            <form class="form-group">
                 <label class="label">From</label>
-                <input class="form-control" type="text" class="inp" name="daterange" value="" />
+                <input class="form-control inp" type="text"id="myinput"name="daterange" />
             </form>
         </div>
         <div class="col-xs-6">
-            <form class="form group">
+            <form class="form-group">
                 <label class="label">To</label>
-                <input class="form-control" type="text" class="inp" name="daterange2" value="" />
+                <input class="form-control inp" type="text" id="myinput2"name="daterange2" />
             </form>
         </div>
-        
     </div>
     <button class="btn btn-success formbut" id="submit">Submit Range</button>
     <br>
