--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -56,11 +56,14 @@ hr {
     margin-left: 0 !important;
     height: 100%;
     /*border-radius: 0.5em;*/
-    -webkit-box-shadow: 0px 3px 11px 0px rgba(50, 50, 50, 0.52);
-    -moz-box-shadow:    0px 3px 11px 0px rgba(50, 50, 50, 0.52);
-    box-shadow:         0px 3px 11px 0px rgba(50, 50, 50, 0.52);
+    background: -moz-radial-gradient(center, ellipse cover, rgba(214,214,214,1) 0%, rgba(168,168,168,1) 100%); /* ff3.6+ */
+    background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%, rgba(214,214,214,1)), color-stop(100%, rgba(168,168,168,1))); /* safari4+,chrome */
+    background:-webkit-radial-gradient(center, ellipse cover, rgba(214,214,214,1) 0%, rgba(168,168,168,1) 100%); /* safari5.1+,chrome10+ */
+    background: -o-radial-gradient(center, ellipse cover, rgba(214,214,214,1) 0%, rgba(168,168,168,1) 100%); /* opera 11.10+ */
+    background: -ms-radial-gradient(center, ellipse cover, rgba(214,214,214,1) 0%, rgba(168,168,168,1) 100%); /* ie10+ */
+    background:radial-gradient(ellipse at center, rgba(214,214,214,1) 0%, rgba(168,168,168,1) 100%); /* w3c */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#D6D6D6', endColorstr='#A8A8A8',GradientType=1 ); /* ie6-9 */
 }
-
 
 #groups {
     background: rgba(79, 79, 79, 0.3);
@@ -116,7 +119,7 @@ li {
 }
 
 .mtab, .inctab {
-    background: rgba(214, 214, 214, 1);
+    background: transparent;
 }
 
 .mtab form {
@@ -139,8 +142,6 @@ li {
 .inctab .btn{
     background: transparent;
     border: 2px solid #212121;
-    /*color: rgba(224, 224, 224, 1);*/
-    /*color: rgba(212, 212, 212, 1);*/
     font-size: 17px;
     margin: 5px;
 }
@@ -154,6 +155,7 @@ li {
     border-left:3px solid #212121;
     border-right:3px solid #212121;
     border-bottom:2px solid #212121;
+    font-size: 14px;
 }
 
 .friendlist .menu {
@@ -185,6 +187,7 @@ h5:not(.activenow) {
     -moz-box-shadow:    0px 3px 11px 0px rgba(50, 50, 50, 0.52);
     box-shadow:         0px 3px 11px 0px rgba(50, 50, 50, 0.52);
     display: none;
+    font-size: 14px;
 }
 /*=========================*/
 /*        Scrollbar        */ 
