--- a/public/stylesheets/svglogo.css
+++ b/public/stylesheets/svglogo.css
@@ -1,19 +1,16 @@
-.clock {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  background: black;
-}
+
+
 .hidd {
     display: none;
 }
+
 .bigcursor {
-  transform-origin: 60px 31.6px;
+  transform-origin: 61.2px 31.2px;
   transform: rotate(0deg);
 }
 
 .smcursor {
-  transform-origin: 60px 31.6px;
+  transform-origin: 61.2px 31.2px;
   transform: rotate(-60deg);
 }
 
@@ -22,23 +19,21 @@
 }
 
 .letU, .letP {
-  fill: #FFC107;
-  stroke-width: 0px;
-  stroke: rgba(223, 216, 216, 1);
+  fill: rgba(243, 116, 53, 1);
 }
 
 .center {
   width: 30px;
-  fill: #FFC107;
-  stroke-width: 0;
-  stroke: #231715;
+  fill: transparent;
+  stroke-width: 2;
+  stroke: rgba(50, 50, 50, 0.6);
 }
 .firstanimationsm {
-  animation : first2 4s ease-in-out;
+  animation : first2 3s ease-in-out;
 }
 
 .firstanimationlg {
-  animation : first 4s ease-in-out;
+  animation : first 3s ease-in-out;
 }
 
 .bounce {
@@ -56,22 +51,22 @@
 
 @keyframes first {
   0% {
-    ttransform-origin: 60px 31.6px;
+    transform-origin: 61.2px 31.2px;
     transform: rotate(0deg);
   }
   100% {
-    transform-origin: 60px 31.6px;
+    transform-origin: 61.2px 31.2px;
     transform: rotate(3600deg);
   }
 }
 
 @keyframes first2 {
   0% {
-    transform-origin: 60px 31.6px;
+    transform-origin: 61.2px 31.2px;
     transform: rotate(-60deg);
   }
   100% {
-    transform-origin: 60px 31.6px;
+    transform-origin: 61.2px 31.2px;
     transform: rotate(0deg);
   }
 }
