--- a/public/stylesheets/svglogo.css
+++ b/public/stylesheets/svglogo.css
@@ -5,13 +5,22 @@
 }
 
 .bigcursor {
+  -ms-transform: rotate(0);
+  -ms-transform-origin: 61.2px 31.2px;
+  -webkit-transform: rotate(0);
+  -webkit-transform-origin: 61.2px 31.2px;
+  transform: rotate(0);
   transform-origin: 61.2px 31.2px;
-  transform: rotate(0deg);
 }
 
 .smcursor {
-  transform-origin: 61.2px 31.2px;
+  -ms-transform: rotate(-60deg);
+  -ms-transform-origin: 61.2px 31.2px;
+  -webkit-transform: rotate(-60deg);
+  -webkit-transform-origin: 61.2px 31.2px;
   transform: rotate(-60deg);
+  transform-origin: 61.2px 31.2px;
+  
 }
 
 .smcursor, .bigcursor, .let {
@@ -51,22 +60,38 @@
 
 @keyframes first {
   0% {
+    -ms-transform: rotate(0);
+    -ms-transform-origin: 61.2px 31.2px;
+    -webkit-transform: rotate(0);
+    -webkit-transform-origin: 61.2px 31.2px;
+    transform: rotate(0);
     transform-origin: 61.2px 31.2px;
-    transform: rotate(0deg);
   }
   100% {
-    transform-origin: 61.2px 31.2px;
+    -ms-transform: rotate(3600deg);
+    -ms-transform-origin: 61.2px 31.2px;
+    -webkit-transform: rotate(3600deg);
+    -webkit-transform-origin: 61.2px 31.2px;
     transform: rotate(3600deg);
+    transform-origin: 61.2px 31.2px;
   }
 }
 
 @keyframes first2 {
   0% {
-    transform-origin: 61.2px 31.2px;
+    -ms-transform: rotate(-60deg);
+    -ms-transform-origin: 61.2px 31.2px;
+    -webkit-transform: rotate(-60deg);
+    -webkit-transform-origin: 61.2px 31.2px;
     transform: rotate(-60deg);
+    transform-origin: 61.2px 31.2px;
   }
   100% {
+    -ms-transform: rotate(0);
+    -ms-transform-origin: 61.2px 31.2px;
+    -webkit-transform: rotate(0);
+    -webkit-transform-origin: 61.2px 31.2px;
+    transform: rotate(0);
     transform-origin: 61.2px 31.2px;
-    transform: rotate(0deg);
   }
 }
